<resources>
    <string name="app_name" translatable="false">Cash Ex</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="welcome">Welcome to Cash Ex</string>
    <string name="sub_title">I\'m here to help you exchange money</string>
    <string name="exchange_rate">Exchange rate:</string>
    <string name="arrowLtoR" translatable="false">></string>
    <string name="fromCash">From:</string>
    <string name="toCash">To:</string>
    <string name="USD">USD</string>
    <string name="EUR">EUR</string>
    <string name="arrowRtoL" translatable="false">&lt;</string>
    <string name="next">NEXT</string>
    <string name="statistics">STATISTICS</string>
    <string name="average_rate">AVERAGE RATE</string>
    <string name="lowest_rate">"The lowest rate: "</string>
    <string name="biggest_rate">"The biggest rate: "</string>
    <string name="warning_end_date_changed_too">The end date was changed too!</string>
    <string name="alert_title" translatable="false">Cash Ex</string>
    <string name="alert_message">No data in cache!</string>
</resources>
